--- a/src/patterns/components/button/button.twig
+++ b/src/patterns/components/button/button.twig
@@ -1,3 +1,5 @@
+{{ attach_library('dcnyc_theme/button') }}
+
 {% if button.url %}
   <a href="{{ button.url }}" class="button{{ button.modifier ? ' ' ~ button.modifier }}">
     {{ button.text }}
